acrab:boards.cfg add macro ACRAB && TRULY_240X240_ROTATE_180 select slcd pin define
Change-Id: Ia67076be2b490a1136a265b115ee899c15712b20

--- a/boards.cfg
+++ b/boards.cfg
@@ -536,7 +536,7 @@ watch_android_msc0             mips    xburst          watch           ingenic  
 d2133e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 gk2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 s2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
-acrab_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
+acrab_android_msc0             mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,TRULY_240X240_ROTATE_180
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
