--- a/boards.cfg
+++ b/boards.cfg
@@ -542,6 +542,7 @@ dorado_uImage_msc1           mips        xburst      dorado              ingenic
 dorado_uImage_rvms           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V20
 dorado_linux_nand            mips        xburst      dorado              ingenic        m200      dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30
 dorado_android_nand            mips        xburst      dorado              ingenic        m200      dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30,BOOT_ANDROID
+dorado_linux_spi             mips        xburst      dorado              ingenic        m200        dorado:SPL_SPI_SUPPORT,DORADO_V30,RVMS
 fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pawscan_uImage_msc0           mips        xburst      pawscan              ingenic        m200      pawscan:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
