--- a/boards.cfg
+++ b/boards.cfg
@@ -533,9 +533,9 @@ dorado_uImage_rvms           mips        xburst      dorado              ingenic
 fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 d2030e_android_msc0          mips        xburst      d2030e              ingenic        m200      d2030e:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 watch_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
-d2133e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
-gk2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
-s2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
+d2133e_android_msc0             mips    xburst          watch           ingenic         m200    watch:D2133E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_SAMSUNG
+gk2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:GK2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_TRULY_TFT240240_2_E
+s2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:S2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163
 acrab_android_msc0             mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,TRULY_240X240_ROTATE_180
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
