--- a/boards.cfg
+++ b/boards.cfg
@@ -537,6 +537,7 @@ d2133e_android_msc0             mips    xburst          watch           ingenic 
 gk2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:GK2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_TRULY_TFT240240_2_E
 s2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:S2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163
 acrab_android_msc0             mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,TRULY_240X240_ROTATE_180,VIDEO_TRULY_TFT240240_2_E
+acrab_android_x163_msc0        mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
