--- a/boards.cfg
+++ b/boards.cfg
@@ -536,8 +536,10 @@ f4785_uImage_nor             mips        xburst      f4785               ingenic
 dorado_uImage_msc0           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V21
 dorado_v21_uImage_rvms           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V21
 dorado_v20_uImage_msc0           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20
+dorado_v22_uImage_msc0           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V22
 dorado_android_msc0          mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V21,BOOT_ANDROID
 dorado_v20_android_msc0          mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20,BOOT_ANDROID
+dorado_v22_android_msc0          mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V22,BOOT_ANDROID
 dorado_uImage_msc1           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC1
 dorado_uImage_rvms           mips        xburst      dorado              ingenic        m200      dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V20
 dorado_linux_nand            mips        xburst      dorado              ingenic        m200      dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30
