delete the config of dorado in newton2.h

--- a/boards.cfg
+++ b/boards.cfg
@@ -545,8 +545,8 @@ dorado_uImage_rvms           mips        xburst      dorado              ingenic
 dorado_linux_nand            mips        xburst      dorado              ingenic        m200      dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30
 dorado_android_nand            mips        xburst      dorado              ingenic        m200      dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30,BOOT_ANDROID
 dorado_linux_spi             mips        xburst      dorado              ingenic        m200        dorado:SPL_SPI_SUPPORT,DORADO_V30,RVMS
-newton2_android_msc0          mips        xburst      dorado              ingenic        m200      newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20,BOOT_ANDROID
-newton2_linux_msc0           mips        xburst      dorado              ingenic        m200      newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20
+newton2_android_msc0          mips        xburst      dorado              ingenic        m200      newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
+newton2_linux_msc0           mips        xburst      dorado              ingenic        m200      newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pawscan_uImage_msc0           mips        xburst      pawscan              ingenic        m200      pawscan:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
