--- a/boards.cfg
+++ b/boards.cfg
@@ -548,6 +548,7 @@ dorado_linux_spi             mips        xburst      dorado              ingenic
 newton2_android_msc0          mips        xburst     newton2              ingenic        m200      newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 newton2_linux_msc0           mips        xburst      newton2              ingenic        m200      newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+fornax_v20_uImage_rvms           mips        xburst      fornax              ingenic        m200      fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,FORNAX_V20
 pawscan_uImage_msc0           mips        xburst      pawscan              ingenic        m200      pawscan:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 icam01m_uImage_rvms           mips        xburst      icam01m              ingenic        m200      icam01m:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
