add the support for newton2

--- a/board/ingenic/newton2/Makefile
+++ b/board/ingenic/newton2/Makefile
@@ -1,5 +1,5 @@
 #
-# Ingenic dorado makefile
+# Ingenic newton2 makefile
 #
 # Copyright (c) 2013 Ingenic Semiconductor Co.,Ltd
 # Author: Zoro <ykli@ingenic.cn>
@@ -32,6 +32,7 @@ COBJS-$(CONFIG_VIDEO_TRULY_TFT240240_2_E) += lcd-truly-tft240240.o
 COBJS-$(CONFIG_VIDEO_BYD_BM8766U) += lcd-bydbm8766u.o
 COBJS-$(CONFIG_VIDEO_BYD_9177AA) += lcd-9177aa.o
 COBJS-$(CONFIG_VIDEO_LH155) += lcd-lh155.o
+COBJS-$(CONFIG_VIDEO_X163) += lcd-x163.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS-y))
