modify the ddr set dll for newton2

--- a/arch/mips/cpu/xburst/jz4775/Makefile
+++ b/arch/mips/cpu/xburst/jz4775/Makefile
@@ -39,6 +39,7 @@ endif
 endif
 
 COBJS-y += clk.o
+COBJS-y += ddr_set_dll.o
 COBJS-y += ../ddr_dwc.o
 COBJS-$(CONFIG_DDR_TEST) += ../ddr_test.o
 COBJS-$(CONFIG_SPL_DDR_SOFT_TRAINING) += ../ddr_dqs_training.o
