--- a/boards.cfg
+++ b/boards.cfg
@@ -540,9 +540,9 @@ foxconn_android_msc0             mips    xburst          watch          ingenic 
 acrab_android_msc0             mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,TRULY_240X240_ROTATE_180,VIDEO_TRULY_TFT240240_2_E
 acrab_android_x163_msc0        mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163
 acrab_android_boe_msc0         mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_BOE_TFT320320
-aw808_android_msc0           mips        xburst      watch               ingenic        m200    watch:AW808,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163
-aw808_iwop_android_msc0           mips        xburst      watch               ingenic        m200    watch:AW808,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163,IWOP
-cw004_android_msc0           mips        xburst      watch               ingenic        m200    watch:CW004,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_ORISE_OTM3201A
+aw808_android_msc0           mips        xburst      watch               ingenic        m200    watch:AW808,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163,SOFT_I2C0
+aw808_iwop_android_msc0           mips        xburst      watch               ingenic        m200    watch:AW808,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163,IWOP,SOFT_I2C0
+cw004_android_msc0           mips        xburst      watch               ingenic        m200    watch:CW004,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_ORISE_OTM3201A,SOFT_I2C0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
