1. modify filenames in arch and board. 	eg: arch/mips/cpu/xburst/m200/m200.c -> arch/mips/cpu/xburst/m200/soc.c 		board/ingenic/dorado/dorado.c	-> board/ingenic/dorad/board.c

--- a/arch/mips/cpu/xburst/jz4775/Makefile
+++ b/arch/mips/cpu/xburst/jz4775/Makefile
@@ -27,7 +27,7 @@ include $(TOPDIR)/config.mk
 LIB	= $(obj)lib$(SOC).o
 
 SOBJS-y	=
-COBJS-y	= $(SOC).o
+COBJS-y	= soc.o
 
 COBJS-$(CONFIG_BURNER) += dym_pll.o
 COBJS-$(CONFIG_JZ_SLT) += dym_pll.o
