--- a/arch/mips/cpu/xburst/m200/Makefile
+++ b/arch/mips/cpu/xburst/m200/Makefile
@@ -27,7 +27,7 @@ include $(TOPDIR)/config.mk
 LIB	= $(obj)lib$(SOC).o
 
 SOBJS-y	=
-COBJS-y	= $(SOC).o
+COBJS-y	= soc.o
 ifndef CONFIG_FPGA
 COBJS-y += pll.o
 COBJS-y += clk.o
