--- a/board/ingenic/fornax/Makefile
+++ b/board/ingenic/fornax/Makefile
@@ -26,7 +26,7 @@ include $(TOPDIR)/config.mk
 
 LIB	= $(obj)lib$(BOARD).o
 
-COBJS-y	:= $(BOARD).o
+COBJS-y	:= board.o
 #COBJS-$(CONFIG_JZ_LCD_V12) += lcd.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
