--- a/board/ingenic/halley/Makefile
+++ b/board/ingenic/halley/Makefile
@@ -26,7 +26,7 @@ include $(TOPDIR)/config.mk
 
 LIB	= $(obj)lib$(BOARD).o
 
-COBJS-y	:= $(BOARD).o
+COBJS-y	:= board.o
 COBJS-$(CONFIG_CMD_FASTBOOT) += fastboot.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
