--- a/board/ingenic/newton2/Makefile
+++ b/board/ingenic/newton2/Makefile
@@ -26,7 +26,7 @@ include $(TOPDIR)/config.mk
 
 LIB	= $(obj)lib$(BOARD).o
 
-COBJS-y	:= $(BOARD).o
+COBJS-y	:= board.o
 COBJS-$(CONFIG_VIDEO_BM347WV_F_8991FTGF) += lcd-8991.o
 COBJS-$(CONFIG_VIDEO_TRULY_TFT240240_2_E) += lcd-truly-tft240240.o
 COBJS-$(CONFIG_VIDEO_BYD_BM8766U) += lcd-bydbm8766u.o
