add k1mbv01 board-level configuration and board-level file
Change-Id: I31da04b8ba8958ed807cae29219157d6eea4485d

--- a/boards.cfg
+++ b/boards.cfg
@@ -553,6 +553,7 @@ fornax_v20_uImage_rvms       mips        xburst      fornax              ingenic
 pawscan_uImage_msc0          mips        xburst      pawscan             ingenic        m200		pawscan:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 pictor_uImage_msc0			 mips        xburst      pictor              ingenic        m200		pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 icam01m_uImage_rvms          mips        xburst      icam01m             ingenic        m200		icam01m:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+k1mbv01_uImage_rvms          mips        xburst      k1mbv01             ingenic        m200		k1mbv01:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
