--- a/boards.cfg
+++ b/boards.cfg
@@ -545,8 +545,8 @@ acrab_android_edo_msc0         mips    xburst          watch           ingenic  
 acrab_android_h139_msc0         mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_AUO_H139BLN01
 aw808_android_msc0           mips        xburst      watch               ingenic        m200    watch:AW808,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163,SOFT_I2C0
 aw808_iwop_android_msc0           mips        xburst      watch               ingenic        m200    watch:AW808,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163,IWOP,LOGO_FILE=iwop,SOFT_I2C0
-x3_iwop_android_msc0           mips        xburst      watch               ingenic        m200    watch:X3,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_BOE_TFT320320,IWOP,LOGO_FILE=iwop,SOFT_I2C0,BOE_TFT320320_ROTATION_180
-in901_android_msc0           mips        xburst      watch               ingenic        m200    watch:X3,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_EDO_E1392AM1,IWOP,LOGO_FILE=iwop,SOFT_I2C0
+x3_iwop_android_msc0           mips        xburst      watch               ingenic        m200    watch:X3,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_BOE_TFT320320,IWOP,LOGO_FILE=iwop,SOFT_I2C0,BOE_TFT320320_ROTATION_180,VIBRATE_GPIO
+in901_android_msc0           mips        xburst      watch               ingenic        m200    watch:X3,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_EDO_E1392AM1,IWOP,LOGO_FILE=iwop,SOFT_I2C0,VIBRATE_DRV2605
 cw004_android_msc0           mips        xburst      watch               ingenic        m200    watch:CW004,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_ORISE_OTM3201A,SOFT_I2C0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
