add new auo x163 panel support
Change-Id: I2464db18f53df2e2043ea28b23b58848491f54aa

--- a/boards.cfg
+++ b/boards.cfg
@@ -537,7 +537,7 @@ d2133e_android_msc0             mips    xburst          watch           ingenic 
 gk2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:GK2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_TRULY_TFT240240_2_E
 s2134e_android_msc0             mips    xburst          watch           ingenic         m200    watch:S2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163
 s2134e_uImage_msc0             mips    xburst          watch           ingenic         m200    watch:S2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,VIDEO_X163
-foxconn_android_msc0             mips    xburst          watch          ingenic         m200    watch:S2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163,LOGO_FILE=foxconn,AUO_X163_ROTATION_180
+foxconn_android_msc0             mips    xburst          watch          ingenic         m200    watch:S2134E,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163,LOGO_FILE=foxconn,AUO_X163_ROTATION_180,CONFIG_AUO_X163_MARK
 acrab_android_msc0             mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,TRULY_240X240_ROTATE_180,VIDEO_TRULY_TFT240240_2_E
 acrab_android_x163_msc0        mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163
 acrab_android_boe_msc0         mips    xburst          watch           ingenic         m200    watch:ACRAB,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_BOE_TFT320320
