--- a/boards.cfg
+++ b/boards.cfg
@@ -550,6 +550,7 @@ dorado_linux_spi             mips        xburst      dorado              ingenic
 newton2_android_msc0         mips        xburst      newton2             ingenic        m200		newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 newton2_linux_msc0           mips        xburst      newton2             ingenic        m200		newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 fornax_uImage_rvms           mips        xburst      fornax              ingenic        m200		fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
+fornax_uImage_rvms_ssi1_nor  mips        xburst      fornax              ingenic        m200		fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,SSI1_TO_SPI_NOR
 fornax_v20_uImage_rvms       mips        xburst      fornax              ingenic        m200		fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,FORNAX_V20
 fornax_v30_uImage_rvms       mips        xburst      fornax              ingenic        m200		fornax:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,FORNAX_V30
 pawscan_uImage_msc0          mips        xburst      pawscan             ingenic        m200		pawscan:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
