add uboot logo setting
Change-Id: I292b3464d0c6fe2152fbb20c6ca67c7bc108f23a

--- a/board/ingenic/k1mbv01/Makefile
+++ b/board/ingenic/k1mbv01/Makefile
@@ -27,7 +27,7 @@ include $(TOPDIR)/config.mk
 LIB	= $(obj)lib$(BOARD).o
 
 COBJS-y	:= board.o
-#COBJS-$(CONFIG_JZ_LCD_V12) += lcd.o
+COBJS-$(CONFIG_JZ_LCD_V12) += lcd.o
 
 SRCS	:= $(SOBJS-y:.o=.S) $(COBJS-y:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS-y))
