--- a/boards.cfg
+++ b/boards.cfg
@@ -537,6 +537,7 @@ f4785_uImage_spinand         mips        xburst      f4785               ingenic
 f4785_uImage_nor             mips        xburst      f4785               ingenic        m200		f4785:SPL_NOR_SUPPORT
 dorado_uImage_msc0           mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V21
 dorado_v21_uImage_rvms       mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V21
+dorado_v21_command_sf_rvms   mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V21,COMMAND_SPI
 dorado_v20_uImage_msc0       mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20
 dorado_v22_uImage_msc0       mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V22
 dorado_android_msc0          mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V21,BOOT_ANDROID
