x3: add lcd h160_tft320320
Change-Id: Icd115aeba89e4461d9210a1d3d8ce7bbcc79a974

--- a/board/ingenic/watch/Makefile
+++ b/board/ingenic/watch/Makefile
@@ -37,6 +37,7 @@ COBJS-$(CONFIG_VIDEO_SAMSUNG) += lcd-samsung.o
 COBJS-$(CONFIG_VIDEO_X163) += lcd-x163.o
 COBJS-$(CONFIG_VIDEO_ORISE_OTM3201A) += lcd-orise-otm3201a.o
 COBJS-$(CONFIG_VIDEO_BOE_TFT320320) += lcd-boe-tft320320.o
+COBJS-$(CONFIG_VIDEO_H160_TFT320320) += lcd-h160-tft320320.o
 COBJS-$(CONFIG_VIDEO_EDO_E1392AM1) += lcd-edo-e1392am1.o
 COBJS-$(CONFIG_VIDEO_AUO_H139BLN01) += lcd-auo-h139bln01.o
 COBJS-$(CONFIG_VIDEO_ARS_NT35350) += lcd-ars-nt35350.o
