--- a/boards.cfg
+++ b/boards.cfg
@@ -553,6 +553,7 @@ x3_iwop_android_msc0           mips        xburst      watch               ingen
 x3_edo_iwop_android_msc0           mips        xburst      watch               ingenic        m200    watch:X3,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_EDO_E1392AM1,IWOP,LOGO_FILE=iwop,SOFT_I2C0,VIBRATE_GPIO
 x3_h160_tft320320_iwop_android_msc0           mips        xburst      watch               ingenic        m200    watch:X3,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_H160_TFT320320,IWOP,LOGO_FILE=iwop,SOFT_I2C0,VIBRATE_GPIO
 in901_android_msc0           mips        xburst      watch               ingenic        m200    watch:IN901,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_EDO_E1392AM1,IWOP,LOGO_FILE=iwop,SOFT_I2C0,VIBRATE_GPIO,SENSORS_PIXART_PAH8001
+f1_android_msc0           mips        xburst      watch               ingenic        m200    watch:X3,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_X163,AUO_X163_MARK,IWOP,LOGO_FILE=iwop,SOFT_I2C0,VIBRATE_GPIO
 cw004_android_msc0           mips        xburst      watch               ingenic        m200    watch:CW004,SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID,VIDEO_ORISE_OTM3201A,SOFT_I2C0
 pictor_uImage_msc0	     mips        xburst      pictor              ingenic        m200      pictor:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
