fix mmc Makefile bug

--- a/drivers/mmc/Makefile
+++ b/drivers/mmc/Makefile
@@ -55,7 +55,7 @@ COBJS-$(CONFIG_ZYNQ_SDHCI) += zynq_sdhci.o
 ifndef CONFIG_SPL_BUILD
 COBJS-$(CONFIG_JZ_MMC) += jz_mmc.o
 else
-ifdef (CONFIG_SPL_MMC_SUPPORT)
+ifdef CONFIG_SPL_MMC_SUPPORT
 COBJS-$(CONFIG_JZ_MMC) += jz_mmc.o
 endif
 endif
