Revert "merge branch newton2-release to branch Indroid4.4-master"
This reverts commit 63154b01d7bd2bf4badbbbfd1379ef4ee07f9571

--- a/arch/mips/cpu/xburst/m200/Makefile
+++ b/arch/mips/cpu/xburst/m200/Makefile
@@ -27,7 +27,7 @@ include $(TOPDIR)/config.mk
 LIB	= $(obj)lib$(SOC).o
 
 SOBJS-y	=
-COBJS-y	= soc.o
+COBJS-y	= $(SOC).o
 ifndef CONFIG_FPGA
 COBJS-y += pll.o
 COBJS-y += clk.o
