--- a/drivers/regulator/Makefile
+++ b/drivers/regulator/Makefile
@@ -31,6 +31,7 @@ endif
 COBJS-$(CONFIG_PMU_ACT8600) += act8600.o
 COBJS-$(CONFIG_PMU_D2041) += d2041_regulator.o
 COBJS-$(CONFIG_PMU_RICOH6x) += ricoh619-regulator.o
+COBJS-$(CONFIG_PMU_SM5007) += sm5007-regulator.o
 
 COBJS	:= $(COBJS-y)
 SRCS	:= $(COBJS:.o=.c)
