support canna_v10_board

--- a/boards.cfg
+++ b/boards.cfg
@@ -563,6 +563,7 @@ phoenix_v10_uImage_msc0      mips        xburst      phoenix        	 ingenic   
 phoenix_v10_uImage_sfc_nor   mips        xburst      phoenix			 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC
 phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix			 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT
 phoenix_v10_uImage_sfc_nand  mips        xburst      phoenix			 ingenic		x1000       phoenix:SPL_SFC_NAND
+canna_v10_uImage_sfc_nor     mips        xburst      canna			 ingenic        x1000       canna:SPL_SFC_NOR
 burner_x1000_lpddr           mips        xburst      burner_x1000		 ingenic        x1000       burner_x1000:DDR_TYPE_LPDDR
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
