--- a/boards.cfg
+++ b/boards.cfg
@@ -562,7 +562,7 @@ k1mbv02_uImage_rvms          mips        xburst      k1mbv02             ingenic
 k1mbv04_uImage_rvms          mips        xburst      k1mbv04             ingenic        m200		k1mbv04:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 phoenix_v10_uImage_msc0      mips        xburst      phoenix        	 ingenic        x1000		phoenix:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 phoenix_v10_uImage_sfc_nor   mips        xburst      phoenix			 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC
-phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix			 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT
+phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix			 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE
 phoenix_v10_uImage_sfc_nand  mips        xburst      phoenix			 ingenic		x1000       phoenix:SPL_SFC_NAND
 burner_x1000_lpddr           mips        xburst      burner_x1000		 ingenic        x1000       burner_x1000:DDR_TYPE_LPDDR
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
