Add nand mtd support

--- a/boards.cfg
+++ b/boards.cfg
@@ -508,6 +508,7 @@ mensa_uImage_msc0            mips        xburst      mensa               ingenic
 mensa_uImage_msc1            mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_SPLMSC=1
 mensa_android_nand           mips        xburst      mensa               ingenic        jz4775		mensa:JZ_NAND_MGR,BOOT_ANDROID
 mensa_linux_nand			 mips        xburst      mensa               ingenic        jz4775		mensa:JZ_NAND_MGR,
+mensa_mtd_nand		     mips        xburst      mensa               ingenic        jz4775		mensa:JZ_NAND
 newton_uImage_msc0           mips        xburst      newton              ingenic        jz4775      newton:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 newton_android_msc0          mips        xburst      newton              ingenic        jz4775		newton:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,BOOT_ANDROID,GPT_AT_TAIL
 burner_jz4775_ddr3           mips        xburst      burner_jz4775       ingenic        jz4775      burner_jz4775:DDR_TYPE_DDR3
@@ -547,6 +548,7 @@ dorado_uImage_msc1           mips        xburst      dorado              ingenic
 dorado_uImage_rvms           mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V20
 dorado_linux_nand            mips        xburst      dorado              ingenic        m200		dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30
 dorado_android_nand          mips        xburst      dorado              ingenic        m200		dorado:JZ_NAND_MGR,NAND_NFI,DORADO_V30,BOOT_ANDROID
+dorado_mtd_nand		     mips        xburst      dorado              ingenic        m200		dorado:JZ_NAND,DORADO_V30
 dorado_linux_spi             mips        xburst      dorado              ingenic        m200        dorado:SPL_SPI_SUPPORT,DORADO_V30,RVMS
 newton2_android_msc0         mips        xburst      newton2             ingenic        m200		newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,BOOT_ANDROID
 newton2_linux_msc0           mips        xburst      newton2             ingenic        m200		newton2:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
