1, Add VR_READ VR_CHECK for jz cloner 	2, Modify in transfer timeout bug for jz47xx_dwc2_udc 	3, split jz cloner

--- a/common/Makefile
+++ b/common/Makefile
@@ -162,7 +162,9 @@ ifdef CONFIG_PCI
 COBJS-$(CONFIG_CMD_PCI) += cmd_pci.o
 endif
 COBJS-y += cmd_pcmcia.o
+ifdef CONFIG_MTD_NAND_JZ
 COBJS-$(CONFIG_BURNER) += cmd_writespl.o
+endif
 COBJS-$(CONFIG_CMD_PORTIO) += cmd_portio.o
 COBJS-$(CONFIG_CMD_PXE) += cmd_pxe.o
 COBJS-$(CONFIG_CMD_READ) += cmd_read.o
