add doss config
Change-Id: I35c8ac6d9cd15ae0dab6f2518a068d8de9a81199

--- a/boards.cfg
+++ b/boards.cfg
@@ -569,6 +569,7 @@ phoenix_v10_uImage_sfc_nand  mips        xburst      phoenix			 ingenic		x1000  
 canna_v10_uImage_sfc_nor     mips        xburst      canna			 ingenic        x1000       canna:SPL_SFC_NOR
 canna_v10_zImage_sfc_nor     mips        xburst      canna			 ingenic        x1000       canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE
 canna_v10_uImage_msc0        mips        xburst      canna        	 ingenic        x1000		canna:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,LARGE_MBR,JZ_MMC_MSC0
+doss_v10_zImage_sfc_nor      mips        xburst      doss			 ingenic        x1000       doss:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE
 burner_x1000_lpddr           mips        xburst      burner_x1000		 ingenic        x1000       burner_x1000:DDR_TYPE_LPDDR
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
