auo_x163 & tps65317: add digital pulse driver for tps65317
Change-Id: I6cd508dddf4cce1618d8e9ce53297c1f80870ebb

--- a/drivers/video/Makefile
+++ b/drivers/video/Makefile
@@ -78,6 +78,7 @@ COBJS-$(CONFIG_VIDEO_JZ4775) += jz_lcd/backlight_pwm.o jz_lcd/jz4775_lcd.o
 COBJS-$(CONFIG_VIDEO_JZ4780) += jz_lcd/backlight_pwm.o jz_lcd/jz4780_lcd.o
 COBJS-$(CONFIG_VIDEO_M200) += jz_lcd/backlight_pwm.o jz_lcd/jz_lcd_v1_2.o
 COBJS-$(CONFIG_EASYSCALE_BACKLIGHT) += backlight_EasyScale.o
+COBJS-$(CONFIG_TPS65137) += digital_pulse.o
 
 COBJS	:= $(sort $(COBJS-y))
 SRCS	:= $(COBJS:.o=.c)
