(1)add ddr test code (2)use jz memset and memcpy replace uboot memset and memcpy

--- a/arch/mips/lib/Makefile
+++ b/arch/mips/lib/Makefile
@@ -41,6 +41,8 @@ COBJS-$(CONFIG_CMD_BOOTM) += bootm_qemu_mips.o
 else
 COBJS-$(CONFIG_CMD_BOOTM) += bootm.o
 endif
+SOBJS-$(CONFIG_USE_ARCH_MEMSET) += memset.o
+SOBJS-$(CONFIG_USE_ARCH_MEMCPY) += memcpy.o
 else
 COBJS-$(CONFIG_SPL_FRAMEWORK) += spl.o
 endif
