--- a/board/ingenic/watch/Makefile
+++ b/board/ingenic/watch/Makefile
@@ -35,6 +35,7 @@ COBJS-$(CONFIG_VIDEO_BYD_9177AA) += lcd-9177aa.o
 COBJS-$(CONFIG_VIDEO_LH155) += lcd-lh155.o
 COBJS-$(CONFIG_VIDEO_SAMSUNG) += lcd-samsung.o
 COBJS-$(CONFIG_VIDEO_X163) += lcd-x163.o
+COBJS-$(CONFIG_VIDEO_ST7796S) += lcd-st7796s.o
 COBJS-$(CONFIG_VIDEO_ORISE_OTM3201A) += lcd-orise-otm3201a.o
 COBJS-$(CONFIG_VIDEO_BOE_TFT320320) += lcd-boe-tft320320.o
 COBJS-$(CONFIG_VIDEO_H160_TFT320320) += lcd-h160-tft320320.o
