add goer_v2 board config
Change-Id: I2eb0dc5f74d90fd2daa1409e2bf808b1ae8749b5

--- a/boards.cfg
+++ b/boards.cfg
@@ -501,6 +501,7 @@ f4775_uImage_spinor          mips        xburst      f4775               ingenic
 halley_uImage_spinor         mips        xburst      halley              ingenic        m150        halley:SPL_SPI_SUPPORT
 halley_linux_nand			 mips        xburst      halley               ingenic        m150		halley:JZ_NAND_MGR,
 trunk_zImage_spinor          mips        xburst      trunk               ingenic        m150        trunk:SPL_SPI_SUPPORT,SPL_OS_BOOT,BOOT_ZIMAGE
+goer_v2_zImage_spinor        mips        xburst      goer_v2             ingenic   m150        goer_v2:SPL_SPI_SUPPORT,SPL_OS_BOOT,BOOT_ZIMAGE
 trunk_uImage_msc0            mips        xburst      trunk        	 ingenic        m150	    trunk:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_MSC0
 trunk_uImage_msc1            mips        xburst      trunk        	 ingenic        m150	    trunk:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,JZ_MMC_MSC1
 gemini_android_msc0          mips        xburst      gemini              ingenic        jz4775	    gemini:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
